--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Doe-Qu-y1D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-889.85507246376824" y="25.271739130434785"/>
+            <point key="canvasLocation" x="-891" y="24"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="PVm-tv-Kbk">
@@ -171,7 +171,7 @@
             </objects>
             <point key="canvasLocation" x="-78" y="24"/>
         </scene>
-        <!--Home-->
+        <!--HomeVC-->
         <scene sceneID="hTu-46-NqK">
             <objects>
                 <viewController id="UBw-vQ-E1n" customClass="HomeVC" customModule="theRay0_0" customModuleProvider="target" sceneMemberID="viewController">
@@ -180,35 +180,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="college" translatesAutoresizingMaskIntoConstraints="NO" id="4TD-iz-SMD">
-                                <rect key="frame" x="0.0" y="-42" width="414" height="778"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="REo-QN-M2g">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="643"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QGx-kp-hOb">
-                                    <size key="itemSize" width="138" height="138"/>
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <visualEffectView key="backgroundView" opaque="NO" contentMode="scaleAspectFill" fixedFrame="YES" id="BSg-ZX-3aV">
-                                    <rect key="frame" x="0.0" y="-20" width="414" height="736"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="643"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="qz4-YX-YQe">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="643"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </view>
                                     <blurEffect style="light"/>
                                 </visualEffectView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="homeCell" id="ivG-S7-qbj" customClass="HomeCVC" customModule="theRay0_0" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="138" height="138"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="138" height="138"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
+                                        <size key="customSize" width="100" height="100"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -216,18 +217,34 @@
                                     <outlet property="delegate" destination="UBw-vQ-E1n" id="t1O-dO-Tyx"/>
                                 </connections>
                             </collectionView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tcn-Sf-4kh">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Home" id="amd-zb-5Rq">
+                                        <barButtonItem key="rightBarButtonItem" title="Logout" id="lrA-LZ-2b6">
+                                            <connections>
+                                                <action selector="logoutPressed:" destination="UBw-vQ-E1n" id="KQJ-P3-rGj"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="xXB-64-MvF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="oGu-zz-aVo"/>
+                    <tabBarItem key="tabBarItem" id="oGu-zz-aVo">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="homeCV" destination="REo-QN-M2g" id="ZX9-45-kSI"/>
+                        <segue destination="xcj-fP-rRw" kind="show" identifier="logoutSegue" id="l4A-O9-tJa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cM5-zJ-Xta" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-10.144927536231885" y="787.50000000000011"/>
+            <point key="canvasLocation" x="-28" y="788"/>
         </scene>
         <!--Search-->
         <scene sceneID="fwj-KJ-kRA">
@@ -252,11 +269,9 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zau-QO-ZQy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
                         <segue destination="UBw-vQ-E1n" kind="relationship" relationship="viewControllers" id="ngt-Rg-U9T"/>
-                        <segue destination="DGx-hz-6lv" kind="relationship" relationship="viewControllers" id="5ez-aF-5xO"/>
                         <segue destination="gbP-9p-Nxp" kind="relationship" relationship="viewControllers" id="gOf-3b-zD2"/>
                     </connections>
                 </tabBarController>
@@ -287,7 +302,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="fir 2"/>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b3X-a8-ruf">
+                            <view contentMode="scaleAspectFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b3X-a8-ruf">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -374,6 +389,6 @@
         <image name="pp" width="1446" height="1446"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4du-i0-Ylb"/>
+        <segue reference="l4A-O9-tJa"/>
     </inferredMetricsTieBreakers>
 </document>
