--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -117,14 +118,14 @@
                                 <rect key="frame" x="0.5" y="372" width="413.5" height="364"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Hul-Ow-VNQ">
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hul-Ow-VNQ">
                                         <rect key="frame" x="82.5" y="9" width="246.5" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartQuotesType="yes" textContentType="username"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="BZm-Tr-z3i">
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BZm-Tr-z3i">
                                         <rect key="frame" x="82.5" y="69" width="246.5" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <nil key="textColor"/>
@@ -171,7 +172,7 @@
             </objects>
             <point key="canvasLocation" x="-78" y="24"/>
         </scene>
-        <!--HomeVC-->
+        <!--Home-->
         <scene sceneID="hTu-46-NqK">
             <objects>
                 <viewController id="UBw-vQ-E1n" customClass="HomeVC" customModule="theRay0_0" customModuleProvider="target" sceneMemberID="viewController">
@@ -234,17 +235,69 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="xXB-64-MvF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" id="oGu-zz-aVo">
+                    <tabBarItem key="tabBarItem" title="Home" id="oGu-zz-aVo">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <connections>
                         <outlet property="homeCV" destination="REo-QN-M2g" id="ZX9-45-kSI"/>
                         <segue destination="xcj-fP-rRw" kind="show" identifier="logoutSegue" id="l4A-O9-tJa"/>
+                        <segue destination="Qyj-B8-tfU" kind="show" identifier="homeCellTo0" id="tv1-zx-lZ9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cM5-zJ-Xta" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-28" y="788"/>
+        </scene>
+        <!--AttendanceVC-->
+        <scene sceneID="pOh-3A-eWO">
+            <objects>
+                <viewController id="Qyj-B8-tfU" customClass="AttendanceVC" customModule="theRay0_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tEv-M4-WZG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zoe-IX-1zB">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="zoe-IX-1zB" secondAttribute="height" multiplier="207:22" id="SW1-IB-QID"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="31U-bZ-3tm">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="oTe-Um-Gpz">
+                                            <connections>
+                                                <segue destination="ddF-Rc-0L1" kind="unwind" unwindAction="toHomeVC:" id="8v8-eO-6g1"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yi0-11-fWi">
+                                <rect key="frame" x="20" y="346" width="374" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zoe-IX-1zB" firstAttribute="top" secondItem="9ae-DD-IO9" secondAttribute="top" id="IQp-6o-LfV"/>
+                            <constraint firstItem="zoe-IX-1zB" firstAttribute="centerX" secondItem="tEv-M4-WZG" secondAttribute="centerX" id="L79-Jf-bjD"/>
+                            <constraint firstItem="zoe-IX-1zB" firstAttribute="trailing" secondItem="9ae-DD-IO9" secondAttribute="trailing" id="jyz-Au-8ns"/>
+                            <constraint firstItem="zoe-IX-1zB" firstAttribute="leading" secondItem="9ae-DD-IO9" secondAttribute="leading" id="wGw-gT-IKf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9ae-DD-IO9"/>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="noClassesAssigned" destination="Yi0-11-fWi" id="N33-bg-RH9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w5y-lV-Euj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ddF-Rc-0L1" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-630.43478260869574" y="1536.6847826086957"/>
         </scene>
         <!--Search-->
         <scene sceneID="fwj-KJ-kRA">
@@ -389,6 +442,6 @@
         <image name="pp" width="1446" height="1446"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="l4A-O9-tJa"/>
+        <segue reference="jzP-ia-E80"/>
     </inferredMetricsTieBreakers>
 </document>
