--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -278,6 +278,17 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7u-gs-Idc">
+                                <rect key="frame" x="20" y="82" width="374" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title=".">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="classPressed:" destination="Qyj-B8-tfU" eventType="touchUpInside" id="qif-Q0-W4z"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -291,13 +302,60 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="classButton" destination="f7u-gs-Idc" id="GhL-4f-MVa"/>
                         <outlet property="noClassesAssigned" destination="Yi0-11-fWi" id="N33-bg-RH9"/>
+                        <segue destination="rSv-o4-YCk" kind="presentation" identifier="toAttendanceModal" id="hab-Um-spx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w5y-lV-Euj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ddF-Rc-0L1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-630.43478260869574" y="1536.6847826086957"/>
+        </scene>
+        <!--Attendance ModalVC-->
+        <scene sceneID="oYK-Br-LGr">
+            <objects>
+                <viewController id="rSv-o4-YCk" customClass="AttendanceModalVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n72-vW-jzY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uPx-tp-uTm">
+                                <rect key="frame" x="0.0" y="20" width="414" height="640"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="rSv-o4-YCk" id="bJl-ug-brl"/>
+                                    <outlet property="delegate" destination="rSv-o4-YCk" id="OYQ-gS-pAp"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ba0-dk-UII">
+                                <rect key="frame" x="20" y="668" width="175" height="48"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Save"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mel-PC-Ugt">
+                                <rect key="frame" x="219" y="668" width="175" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <segue destination="ruA-LS-MxI" kind="unwind" unwindAction="toHomeVC:" id="6Ti-nh-Cgd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="LBS-2f-bLU"/>
+                    </view>
+                    <connections>
+                        <outlet property="studentsName" destination="uPx-tp-uTm" id="MGI-sW-AVx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Ld-DR-Iua" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ruA-LS-MxI" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-630.43478260869574" y="2253.2608695652175"/>
         </scene>
         <!--Search-->
         <scene sceneID="fwj-KJ-kRA">
