--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -342,8 +342,8 @@
                                 <rect key="frame" x="20" y="304" width="374" height="63"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V4y-gI-tCu">
                                 <rect key="frame" x="0.0" y="20" width="414" height="631"/>
@@ -395,6 +395,7 @@
                     <connections>
                         <segue destination="UBw-vQ-E1n" kind="relationship" relationship="viewControllers" id="ngt-Rg-U9T"/>
                         <segue destination="gbP-9p-Nxp" kind="relationship" relationship="viewControllers" id="gOf-3b-zD2"/>
+                        <segue destination="DGx-hz-6lv" kind="relationship" relationship="viewControllers" id="Qk7-5l-fme"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u66-1T-zFE" userLabel="First Responder" sceneMemberID="firstResponder"/>
