1. Activity indicator and alert display added as plugins

--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -512,6 +512,6 @@
         <image name="pp" width="1446" height="1446"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jzP-ia-E80"/>
+        <segue reference="4du-i0-Ylb"/>
     </inferredMetricsTieBreakers>
 </document>
