--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -375,6 +375,13 @@
                     <view key="view" contentMode="scaleToFill" id="bN3-I1-asj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t24-v9-Ryb">
+                                <rect key="frame" x="0.0" y="20" width="414" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="n56-B1-Btx"/>
                     </view>
