--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -371,7 +371,7 @@
         <!--Search-->
         <scene sceneID="fwj-KJ-kRA">
             <objects>
-                <viewController id="DGx-hz-6lv" sceneMemberID="viewController">
+                <viewController id="DGx-hz-6lv" customClass="SearchVC" customModule="theRay0_0" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bN3-I1-asj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -381,15 +381,38 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hjA-J6-zs6">
+                                <rect key="frame" x="0.0" y="76" width="414" height="611"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchCell" rowHeight="120" id="hbl-42-5FM">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hbl-42-5FM" id="fD9-Y7-bPX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="119.66666666666667"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="DGx-hz-6lv" id="PUa-fK-Arf"/>
+                                    <outlet property="delegate" destination="DGx-hz-6lv" id="jUy-gM-o6i"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="n56-B1-Btx"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" id="6fL-av-OpH"/>
+                    <connections>
+                        <outlet property="searchBar" destination="t24-v9-Ryb" id="MwJ-CB-PN4"/>
+                        <outlet property="searchTable" destination="hjA-J6-zs6" id="Tud-CO-exg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mNs-aZ-iQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="645" y="788"/>
+            <point key="canvasLocation" x="1281" y="788"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mOV-bR-Pcq">
@@ -511,7 +534,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SWc-WY-HOT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1294" y="788"/>
+            <point key="canvasLocation" x="625" y="788"/>
         </scene>
     </scenes>
     <resources>
@@ -519,6 +542,6 @@
         <image name="pp" width="1446" height="1446"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4du-i0-Ylb"/>
+        <segue reference="l4A-O9-tJa"/>
     </inferredMetricsTieBreakers>
 </document>
