--- a/theRay0.0/View/Base.lproj/Main.storyboard
+++ b/theRay0.0/View/Base.lproj/Main.storyboard
@@ -380,6 +380,10 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>scope</string>
+                                    <string>fdfe</string>
+                                </scopeButtonTitles>
                                 <connections>
                                     <outlet property="delegate" destination="DGx-hz-6lv" id="Dp5-BV-ppz"/>
                                 </connections>
